# chatgpt_vkbot

./: .gitignore  README.md  pyproject.toml  startup_bot.sh
src/: bot.py  config.py
src/handlers/: __init__.py  public.py
src/middlewares/: command_prefix.py  prevent_flood.py  prevent_flood_middleware.py
