[tool.poetry]
name = "chatgpt-vkbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chatgpt_vkbot"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.1"
vkbottle = "^4.3.12"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
